--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-pandas==1.3.5
-scikit_learn==1.0.2
-streamlit==1.23.1
-numpy
-matplotlib
+streamlit==1.25.0
+pandas==2.1.1
+numpy==1.26.0
+scikit-learn==1.4.0
+matplotlib==3.8.0
